--- a/generationsgerechtigkeit.html
+++ b/generationsgerechtigkeit.html
@@ -12,6 +12,7 @@
         <a href="index.html">Schulden</a>
         <a href="ausgabenposten.html">Ausgabenposten</a>
         <a href="herausforderungen.html">Herausforderungen</a>
+        <a href="bundeshaushalt.html">Bundeshaushalt</a>
         <a href="staatsverschuldung.html">Staatsverschuldung</a>
         <a href="schuldenbremse.html">Schuldenbremse</a>
         <a href="generationsgerechtigkeit.html" class="active">Generationsgerechtigkeit</a>
