--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
     <title>Schulden</title>
 </head>
 <body>
@@ -12,6 +13,7 @@
         <a href="index.html" class="active">Schulden</a>
         <a href="ausgabenposten.html">Ausgabenposten</a>
         <a href="herausforderungen.html">Herausforderungen</a>
+        <a href="bundeshaushalt.html">Bundeshaushalt</a>
         <a href="staatsverschuldung.html">Staatsverschuldung</a>
         <a href="schuldenbremse.html">Schuldenbremse</a>
         <a href="generationsgerechtigkeit.html">Generationsgerechtigkeit</a>
@@ -25,8 +27,47 @@
 
     <main>
         <section>
-            <h2>Schulden</h2>
+            <h2>Gute Schulden oder schlechte Schulden</h2>
         </section>
+
+        <section>
+            <h3>Was sind Schulden im allgemeinen?:</h3>
+            <ul>
+                <li>Man leiht sich Geld von einer Person/Institution wie bspw. einer Bank </li>
+                <li>Das ausgeliehene Geld wird auch als Kredit oder Darlehen bezeichnet</li>
+                <li>Es ist vorgesehen, dass Schulden immer zurück gezahlt werden</li>
+                <li>Die Person/Institution, die das Geld verleiht bekommt eine Belohnung auch Zins genannt (meist ein abgemachter Prozentsatz des ausgeliehenen Geldes) </li>
+            </ul>            
+        </section>
+        
+        <section>
+            <h3>Welche verschiedenen Arten von Schulden gibt es?</h3>
+            <ul>
+                <li>Primärschulden (Können für den Schuldner existenzbedrohend sein (z.B. Mietschulden oder Stromschulden))</li>
+                <li>Sekundärschulden (bedrohen nicht die Existenz des Schuldners z.B. Schulden aus Ratenkäufen)</li>
+                <li>Steuerschulden </li>
+                <li>Versicherungsschulden</li>
+                <li>Immobilienschulden</li>
+                <li>Kreditschulden </li>
+                <li>Schulden durch Unterhalt</li>
+                <li>Schulden durch Scheidungen</li> 
+            </ul>
+        </section> 
+
+        <section>
+            <h3>Unterschied Schulden, Verschuldung, Überschuldung:</h3>
+            <ul>
+                <li>Schulden: eher geringe Zahlungsausstände, deren Rückzahlung für den Schuldner nicht existenzbedrohend ist.</li>
+                <li>Verschulddung: Angehäufte Schulden können nicht mehr durch das monatliche Einkommen gedeckt werden. ( z.B. die Verbindlichkeiten bei einem Hauskauf)</li>
+                <li>Überschuldung: Wenn der Schuldner seit mindestens drei Monaten seine Raten nicht mehr mit seinen Einnahmen begleichen kann. Es enstehen sehr hohe Schulden und der betroffene ist Zahlungsunfähig.</li>
+            </ul>
+        </section>
+        
+        <p>Quellen:</p>
+        <a style="color: blue;" href="https://www.jugendbudget.ch/de/was-sind-schulden-verschuldung-einfach-erklaert/#:~:text=Schulden%20machen%20heisst%2C%20sich%20von,du%20nicht%20genug%20Geld%20hast.">jugendbudget.ch</a>
+
+
+
 
         <!--<section id="staatsverschuldung">
             <h2>Staatsverschuldung</h2>
