--- a/herausforderungen.html
+++ b/herausforderungen.html
@@ -12,6 +12,7 @@
         <a href="index.html">Schulden</a>
         <a href="ausgabenposten.html">Ausgabenposten</a>
         <a href="herausforderungen.html" class="active">Herausforderungen</a>
+        <a href="bundeshaushalt.html">Bundeshaushalt</a>
         <a href="staatsverschuldung.html">Staatsverschuldung</a>
         <a href="schuldenbremse.html">Schuldenbremse</a>
         <a href="generationsgerechtigkeit.html">Generationsgerechtigkeit</a>
