--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     </summary>-->
 
     <main>
+
+        <img style="border-radius: 100px;" src="schulden.jpg" hidden>
+
         <section>
             <h2>Gute Schulden oder schlechte Schulden</h2>
         </section>
@@ -64,7 +67,7 @@
         </section>
         
         <p>Quellen:</p>
-        <a style="color: blue;" href="https://www.jugendbudget.ch/de/was-sind-schulden-verschuldung-einfach-erklaert/#:~:text=Schulden%20machen%20heisst%2C%20sich%20von,du%20nicht%20genug%20Geld%20hast.">jugendbudget.ch</a>
+        <a class="source-link" href="https://www.jugendbudget.ch/de/was-sind-schulden-verschuldung-einfach-erklaert/#:~:text=Schulden%20machen%20heisst%2C%20sich%20von,du%20nicht%20genug%20Geld%20hast.">jugendbudget.ch</a>
 
 
 
