--- a/staatsverschuldung.html
+++ b/staatsverschuldung.html
@@ -58,7 +58,7 @@
         </section>
         
         <p>Quellen:</p>
-        <a style="color: blue;" href="https://www.forwardyou.com/de-at/guide/investment-lebensversicherung/weltweite-staatsverschuldung/#:~:text=Wie%20private%20Unternehmen%20kann%20sich,in%20diesem%20Fall%20als%20Staatsverschuldung">forwardyou.com</a>
+        <a class="source-link" href="https://www.forwardyou.com/de-at/guide/investment-lebensversicherung/weltweite-staatsverschuldung/#:~:text=Wie%20private%20Unternehmen%20kann%20sich,in%20diesem%20Fall%20als%20Staatsverschuldung">forwardyou.com</a>
 
     </main>
     
