--- a/bundeshaushalt.html
+++ b/bundeshaushalt.html
@@ -62,7 +62,7 @@
         </section>
 
         <p>Quellen:</p>
-        <a style="color: blue;" href="https://www.bundeshaushalt.de/DE/Erklaerwelt/erklaerwelt.html#:~:text=Einnahmen%20und%20Ausgaben&text=Wichtigste%20Einnahmequellen%20sind%20Umsatzsteuer%2C%20Lohn,Tabaksteuer%20z%C3%A4hlen%20zu%20den%20Einnahmen.">bundeshaushalt.de</a>
+        <a class="source-link" href="https://www.bundeshaushalt.de/DE/Erklaerwelt/erklaerwelt.html#:~:text=Einnahmen%20und%20Ausgaben&text=Wichtigste%20Einnahmequellen%20sind%20Umsatzsteuer%2C%20Lohn,Tabaksteuer%20z%C3%A4hlen%20zu%20den%20Einnahmen.">bundeshaushalt.de</a>
 
     </main>
     
