--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Econo=me Website from Clemens, Joscha, Marvin, Robert and Finn">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <title>Schulden</title>
