--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Econo=me Website from Clemens, Joscha, Marvin, Robert and Finn">
     <link rel="manifest" href="manifest.json"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=sell" />
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
     <title>Schulden</title>
 </head>
 <body>
