--- a/staatsverschuldung.html
+++ b/staatsverschuldung.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Econo=me Website from Clemens, Joscha, Marvin, Robert and Finn">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=monitoring" />
     <link rel="stylesheet" href="style.css">
-    <title>Schulden</title>
+    <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
+    <title>Staatsverschuldung</title>
 </head>
 <body>
 
